compiler-rust/bloodc/src/parser/snapshots/bloodc__parser__tests__extern_block_c.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Bridge(
            BridgeDecl {
                attrs: [],
                language: Spanned {
                    node: "C",
                    span: Span {
                        start: 8,
                        end: 11,
                        start_line: 2,
                        start_col: 8,
                    },
                },
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 1,
                        end: 7,
                        start_line: 2,
                        start_col: 1,
                    },
                },
                items: [
                    Function(
                        BridgeFn {
                            attrs: [],
                            name: Spanned {
                                node: SymbolU32 {
                                    value: 2,
                                },
                                span: Span {
                                    start: 21,
                                    end: 27,
                                    start_line: 3,
                                    start_col: 8,
                                },
                            },
                            params: [
                                BridgeParam {
                                    name: Spanned {
                                        node: SymbolU32 {
                                            value: 3,
                                        },
                                        span: Span {
                                            start: 28,
                                            end: 32,
                                            start_line: 3,
                                            start_col: 15,
                                        },
                                    },
                                    ty: Type {
                                        kind: Path(
                                            TypePath {
                                                segments: [
                                                    TypePathSegment {
                                                        name: Spanned {
                                                            node: SymbolU32 {
                                                                value: 4,
                                                            },
                                                            span: Span {
                                                                start: 34,
                                                                end: 39,
                                                                start_line: 3,
                                                                start_col: 21,
                                                            },
                                                        },
                                                        args: None,
                                                    },
                                                ],
                                                span: Span {
                                                    start: 34,
                                                    end: 39,
                                                    start_line: 3,
                                                    start_col: 21,
                                                },
                                            },
                                        ),
                                        span: Span {
                                            start: 34,
                                            end: 39,
                                            start_line: 3,
                                            start_col: 21,
                                        },
                                    },
                                    ownership: None,
                                    span: Span {
                                        start: 28,
                                        end: 39,
                                        start_line: 3,
                                        start_col: 15,
                                    },
                                },
                            ],
                            is_variadic: false,
                            return_type: Some(
                                Type {
                                    kind: Pointer {
                                        mutable: true,
                                        inner: Type {
                                            kind: Path(
                                                TypePath {
                                                    segments: [
                                                        TypePathSegment {
                                                            name: Spanned {
                                                                node: SymbolU32 {
                                                                    value: 5,
                                                                },
                                                                span: Span {
                                                                    start: 49,
                                                                    end: 51,
                                                                    start_line: 3,
                                                                    start_col: 36,
                                                                },
                                                            },
                                                            args: None,
                                                        },
                                                    ],
                                                    span: Span {
                                                        start: 49,
                                                        end: 51,
                                                        start_line: 3,
                                                        start_col: 36,
                                                    },
                                                },
                                            ),
                                            span: Span {
                                                start: 49,
                                                end: 51,
                                                start_line: 3,
                                                start_col: 36,
                                            },
                                        },
                                    },
                                    span: Span {
                                        start: 44,
                                        end: 51,
                                        start_line: 3,
                                        start_col: 31,
                                    },
                                },
                            ),
                            span: Span {
                                start: 18,
                                end: 52,
                                start_line: 3,
                                start_col: 5,
                            },
                        },
                    ),
                    Function(
                        BridgeFn {
                            attrs: [],
                            name: Spanned {
                                node: SymbolU32 {
                                    value: 6,
                                },
                                span: Span {
                                    start: 60,
                                    end: 64,
                                    start_line: 4,
                                    start_col: 8,
                                },
                            },
                            params: [
                                BridgeParam {
                                    name: Spanned {
                                        node: SymbolU32 {
                                            value: 7,
                                        },
                                        span: Span {
                                            start: 65,
                                            end: 68,
                                            start_line: 4,
                                            start_col: 13,
                                        },
                                    },
                                    ty: Type {
                                        kind: Pointer {
                                            mutable: true,
                                            inner: Type {
                                                kind: Path(
                                                    TypePath {
                                                        segments: [
                                                            TypePathSegment {
                                                                name: Spanned {
                                                                    node: SymbolU32 {
                                                                        value: 5,
                                                                    },
                                                                    span: Span {
                                                                        start: 75,
                                                                        end: 77,
                                                                        start_line: 4,
                                                                        start_col: 23,
                                                                    },
                                                                },
                                                                args: None,
                                                            },
                                                        ],
                                                        span: Span {
                                                            start: 75,
                                                            end: 77,
                                                            start_line: 4,
                                                            start_col: 23,
                                                        },
                                                    },
                                                ),
                                                span: Span {
                                                    start: 75,
                                                    end: 77,
                                                    start_line: 4,
                                                    start_col: 23,
                                                },
                                            },
                                        },
                                        span: Span {
                                            start: 70,
                                            end: 77,
                                            start_line: 4,
                                            start_col: 18,
                                        },
                                    },
                                    ownership: None,
                                    span: Span {
                                        start: 65,
                                        end: 77,
                                        start_line: 4,
                                        start_col: 13,
                                    },
                                },
                            ],
                            is_variadic: false,
                            return_type: None,
                            span: Span {
                                start: 57,
                                end: 79,
                                start_line: 4,
                                start_col: 5,
                            },
                        },
                    ),
                ],
                span: Span {
                    start: 1,
                    end: 81,
                    start_line: 2,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 1,
        end: 81,
        start_line: 2,
        start_col: 1,
    },
}
