compiler-rust/bloodc/src/parser/snapshots/bloodc__parser__tests__extern_block_without_abi.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Bridge(
            BridgeDecl {
                attrs: [],
                language: Spanned {
                    node: "C",
                    span: Span {
                        start: 8,
                        end: 9,
                        start_line: 2,
                        start_col: 8,
                    },
                },
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 1,
                        end: 7,
                        start_line: 2,
                        start_col: 1,
                    },
                },
                items: [
                    Function(
                        BridgeFn {
                            attrs: [],
                            name: Spanned {
                                node: SymbolU32 {
                                    value: 2,
                                },
                                span: Span {
                                    start: 17,
                                    end: 21,
                                    start_line: 3,
                                    start_col: 8,
                                },
                            },
                            params: [
                                BridgeParam {
                                    name: Spanned {
                                        node: SymbolU32 {
                                            value: 3,
                                        },
                                        span: Span {
                                            start: 22,
                                            end: 23,
                                            start_line: 3,
                                            start_col: 13,
                                        },
                                    },
                                    ty: Type {
                                        kind: Pointer {
                                            mutable: false,
                                            inner: Type {
                                                kind: Path(
                                                    TypePath {
                                                        segments: [
                                                            TypePathSegment {
                                                                name: Spanned {
                                                                    node: SymbolU32 {
                                                                        value: 4,
                                                                    },
                                                                    span: Span {
                                                                        start: 32,
                                                                        end: 34,
                                                                        start_line: 3,
                                                                        start_col: 23,
                                                                    },
                                                                },
                                                                args: None,
                                                            },
                                                        ],
                                                        span: Span {
                                                            start: 32,
                                                            end: 34,
                                                            start_line: 3,
                                                            start_col: 23,
                                                        },
                                                    },
                                                ),
                                                span: Span {
                                                    start: 32,
                                                    end: 34,
                                                    start_line: 3,
                                                    start_col: 23,
                                                },
                                            },
                                        },
                                        span: Span {
                                            start: 25,
                                            end: 34,
                                            start_line: 3,
                                            start_col: 16,
                                        },
                                    },
                                    ownership: None,
                                    span: Span {
                                        start: 22,
                                        end: 34,
                                        start_line: 3,
                                        start_col: 13,
                                    },
                                },
                            ],
                            is_variadic: false,
                            return_type: Some(
                                Type {
                                    kind: Path(
                                        TypePath {
                                            segments: [
                                                TypePathSegment {
                                                    name: Spanned {
                                                        node: SymbolU32 {
                                                            value: 5,
                                                        },
                                                        span: Span {
                                                            start: 39,
                                                            end: 42,
                                                            start_line: 3,
                                                            start_col: 30,
                                                        },
                                                    },
                                                    args: None,
                                                },
                                            ],
                                            span: Span {
                                                start: 39,
                                                end: 42,
                                                start_line: 3,
                                                start_col: 30,
                                            },
                                        },
                                    ),
                                    span: Span {
                                        start: 39,
                                        end: 42,
                                        start_line: 3,
                                        start_col: 30,
                                    },
                                },
                            ),
                            span: Span {
                                start: 14,
                                end: 43,
                                start_line: 3,
                                start_col: 5,
                            },
                        },
                    ),
                ],
                span: Span {
                    start: 1,
                    end: 45,
                    start_line: 2,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 1,
        end: 45,
        start_line: 2,
        start_col: 1,
    },
}
